apps/docker-registry/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docker-registry
  namespace: cluster
spec:
  parentRefs:
    - name: gateway
      namespace: cluster
  hostnames:
    - docker-registry.anyflow.net
  rules:
    - matches:
        - path:
            type: PathPrefix #Implementation-specific, PathPrefix, Exact
            value: /
      backendRefs:
        - name: docker-registry
          port: 5000
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
